# ezdb

./: README.md  meson.build  setup  test
include/: page.h  record.h  table.h
src/: meson.build  packed_page.c  record.c  table.c
tests/: check_page.c  check_record.c  check_table.c  meson.build
